--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,7 +8,7 @@
  <body>
    <header class="main-header">
      <div class= "container">
-      <a class="index-logo" href="#"> <img src="http://img/Logo2-header-item.svg" width="150" height="100" alt="pic">
+      <a class="index-logo" href="#"> <img src="img/catalog-logo.png" width="150" height="100" alt="pic">
       </a>
       <nav class="main-navigation">
            <ul>
@@ -45,13 +45,13 @@
            <li><a class="breadcrumbs-link" href="#">Набор для путешествий</a></li>
         </ul>
       <div class="picture-big">
-        <img src="http://img/item-big.svg" width="150" height="100" alt="pic">
+        <img src="img/item-big.jpg" width="150" height="100" alt="pic">
       </div>
       <div class="picture-small">
         <ul>
-          <li><a href="#"><img src="http://img/item-small1.svg" width="150" height="100" alt="pic"></a> </li>
-          <li><a href="#"><img src="http://img/item-small2.svg" width="150" height="100" alt="pic"></a> </li>
-          <li><a href="#"><img src="http://img/item-small3.svg" width="150" height="100" alt="pic"></a> </li>
+          <li><a href="#"><img src="img/item-small1.jpg" width="150" height="100" alt="pic"></a> </li>
+          <li><a href="#"><img src="img/item-small2.jpg" width="150" height="100" alt="pic"></a> </li>
+          <li><a href="#"><img src="img/item-small3.jpg" width="150" height="100" alt="pic"></a> </li>
           </ul>
       </div>
     <div class="article">
