--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
  <body>
    <header class="main-header">
      <div class= "container">
-       <a class="logo" href="#"><img src="http://img/Logo2-header-item.svg" width="150" height="100" alt="pic"></a>
+       <a class="logo" href="#"><img src="img/catalog-logo.png" width="150" height="100" alt="pic"></a>
       <nav class="main-navigation">
            <ul>
              <li>
@@ -103,7 +103,7 @@
    <div class="catalog">
    <div class="catalog-pagination">
    <div class="catalog-item">
-     <a href="#"><img src="http://img/item6.svg" width="150" height="100" alt="pic"></a>
+     <a href="#"><img src="img/item1.jpg" width="150" height="100" alt="pic"></a>
      <a href="#">Набор для путешествий
        <div class= "item">«Baxter Of California»</div>
      </a>
@@ -113,7 +113,7 @@
      </div>
    </div>
    <div class="catalog_item">
-     <a href=""><img src="http://img/item5.svg" width="150" height="100" alt="pic"></a>
+     <a href=""><img src="img/item2.jpg" width="150" height="100" alt="pic"></a>
      <a href="#">Увлажняющий кондиционер
        <div class= "item">«Baxter Of California»</div>
      </a>
@@ -123,7 +123,7 @@
      </div>
    </div>
    <div class="catalog_item">
-     <a href=""><img src="http://img/item4.svg" width="150" height="100" alt="pic"></a>
+     <a href=""><img src="img/item3.jpg" width="150" height="100" alt="pic"></a>
      <a href="#">Гель для волос
        <div class= "item">«Cuavecito»</div>
      </a>
@@ -133,7 +133,7 @@
      </div>
    </div>
    <div class="catalog_item">
-   <a href=""><img src="http://img/item1.svg" width="150" height="100" alt="pic"></a>
+   <a href=""><img src="img/item4.jpg" width="150" height="100" alt="pic"></a>
    <a href="#">Глина для укладки волос
      <div class= "item">«American Crew»</div>
    </a>
@@ -143,7 +143,7 @@
    </div>
  </div>
  <div class="catalog_item">
-   <a href=""><img src="http://img/item3.svg" width="150" height="100" alt="pic"></a>
+   <a href=""><img src="img/item5.jpg" width="150" height="100" alt="pic"></a>
    <a href="#">Гель для волос
      <div class= "item">«American Crew»</div>
    </a>
@@ -153,7 +153,7 @@
      </div>
    </div>
    <div class="catalog_item">
-     <a href=""><img src="http://img/item2.svg" width="150" height="100" alt="pic"></a>
+     <a href=""><img src="img/item6.jpg" width="150" height="100" alt="pic"></a>
        <a href="#">Набор для бритья
          <div class= "item">«Baxter Of California»</div>
        </a>
