--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <main class="container">
       <div class="index-logo">
-        <img src="img/BORODINSKI Logo-header.png" width="368" height="204" alt="Барбершоп «Бородинский»">
+        <img src="img/index-logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
       </div>
       <section class="features">
         <div class="features-item">
@@ -69,7 +69,7 @@
           <h2 class="index-content-title">Фотогалерея</h2>
           <div class="gallery">
             <figure class="gallery-content">
-              <img src="img/pic-news-photos.svg" width="286" height="164" alt="">
+              <img src="img/temp-news.jpg" width="286" height="164" alt="">
             </figure>
             <button class="btn gallery-prev">Назад</button>
             <button class="btn gallery-next">Вперёд</button>
