--- a/price.html
+++ b/price.html
@@ -8,7 +8,7 @@
  <body>
    <header class="main-header">
      <div class= "container">
-       <a class="logo" href="#"><img src="img/catalog-logo.png" width="150" height="100" alt="pic"></a>
+       <a class="logo" href="#"><img src="img/logo/catalog-logo.png" width="150" height="100" alt="pic"></a>
       <nav class="main-navigation">
            <ul>
              <li>
