--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,12 +7,12 @@
   </head>
  <body>
    <header class="main-header">
-     <div class= "container">
+     <div class= "container clearfix">
       <a class="index-logo" href="#"> <img src="img/logo/catalog-logo.png" width="150" height="100" alt="pic">
       </a>
       <nav class="main-navigation">
            <ul>
-             <li>
+             <li> 
                <a href="#">Информация</a>
              </li> 
              <li>
@@ -34,7 +34,7 @@
          </div>
      </div> 
    </header>
-   <main class="container">
+   <main class="container clearfix">
      <div class="title">
        <h1>Набор для путешествий «Baxter of California»</h1>
      </div>
@@ -44,6 +44,7 @@
            <li><a class="breadcrumbs-link" href="#">Средства ухода</a></li>
            <li><a class="breadcrumbs-link" href="#">Набор для путешествий</a></li>
         </ul>
+        <div class="item-pics"
       <div class="picture-big">
         <img src="img/temp/item-big.jpg" width="150" height="100" alt="pic">
       </div>
@@ -54,7 +55,7 @@
           <li><a href="#"><img src="img/temp/item-small3.jpg" width="150" height="100" alt="pic"></a> </li>
           </ul>
       </div>
-    <div class="article">
+    <div class="article" clearfix>
       <div class="article-item">Есть в наличии
       </div>
       <div class="article-item">Артикул: dexer-ae
@@ -79,7 +80,7 @@
     </div>
   </main>
 <footer class="main-footer">
-     <div class="container">
+     <div class="container" clearfix>
      <div class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
