--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   </head>
  <body>
    <header class="main-header">
-     <div class= "container">
+     <div class= "container clearfix">
        <a class="logo" href="#"><img src="img/logo/catalog-logo.png" width="150" height="100" alt="pic"></a>
       <nav class="main-navigation">
            <ul>
@@ -174,7 +174,7 @@
      </div> 
     </main> 
    <footer class="main-footer">
-     <div class="container">
+     <div class="container clearfix">
      <div class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
