--- a/catalog.html
+++ b/catalog.html
@@ -160,9 +160,7 @@
        <div class="buy">
          <div class="price">3900руб.</div>
          <a href="#" class="btn">Купить</a>
-       </div>
-   </div>
-   </div>
+       </div></div></div>
      <div class="pagination">
        <ul class="pagination_list">
          <li class="pagination_item"><a href="#">1</a></li>
