--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         </div>
         <div class="features-item">
           <b class="features-name">Дорого</b>
-          <p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
-        </div>
+          <p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p></div>
       </section>
       <div class="index-content clearfix">
         <div class="index-content-left">
