--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,8 +8,7 @@
  <body>
    <header class="main-header">
      <div class= "container clearfix">
-      <a class="index-logo" href="#"> <img src="img/logo/catalog-logo.png" width="150" height="100" alt="pic">
-      </a>
+       <a class="logo" href="#"><img src="img/logo/catalog-logo.png" width="150" height="100" alt="pic"></a>
       <nav class="main-navigation">
            <ul>
              <li> 
@@ -44,8 +43,8 @@
            <li><a class="breadcrumbs-link" href="#">Средства ухода</a></li>
            <li><a class="breadcrumbs-link" href="#">Набор для путешествий</a></li>
         </ul>
-        <div class="item-pics"
-      <div class="picture-big">
+        <div class="item-pics">
+        <div class="picture-big">
         <img src="img/temp/item-big.jpg" width="150" height="100" alt="pic">
       </div>
       <div class="picture-small">
@@ -55,11 +54,9 @@
           <li><a href="#"><img src="img/temp/item-small3.jpg" width="150" height="100" alt="pic"></a> </li>
           </ul>
       </div>
-    <div class="article" clearfix>
-      <div class="article-item">Есть в наличии
-      </div>
-      <div class="article-item">Артикул: dexer-ae
-      </div>
+    <div class="product-descript">
+      <div class="article-item">Есть в наличии</div>
+      <div class="article-item">Артикул: dexer-ae</div>
       <div class="description">
         <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
      </div>
@@ -67,7 +64,6 @@
        <div class="price">2900руб.</div>
        <a href="#" class="btn">Купить</a>
      </div>
-    </div>
     <div class="item-content">
     <h2>В набор входят</h2>
     <ul class="item-content">
@@ -78,9 +74,10 @@
         <li>Удобная кожаная косметичка</li>
      </ul>  
     </div>
+    </div>
   </main>
 <footer class="main-footer">
-     <div class="container" clearfix>
+     <div class="container clearfix">
      <div class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
