--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,7 +8,7 @@
  <body>
    <header class="main-header">
      <div class= "container clearfix">
-       <a class="logo" href="#"><img src="img/logo/catalog-logo.png" width="150" height="100" alt="pic"></a>
+       <a class="logo" href="#"><img src="img/logo/catalog-logo.png" width="110" height="30" alt="pic"></a>
       <nav class="main-navigation">
            <ul>
              <li> 
@@ -45,18 +45,23 @@
         </ul>
         <div class="item-pics">
         <div class="picture-big">
-        <img src="img/temp/item-big.jpg" width="150" height="100" alt="pic">
+        <img src="img/temp/item-big.jpg" width="460" height="499" alt="pic">
       </div>
       <div class="picture-small">
         <ul>
-          <li><a href="#"><img src="img/temp/item-small1.jpg" width="150" height="100" alt="pic"></a> </li>
-          <li><a href="#"><img src="img/temp/item-small2.jpg" width="150" height="100" alt="pic"></a> </li>
-          <li><a href="#"><img src="img/temp/item-small3.jpg" width="150" height="100" alt="pic"></a> </li>
+          <li><a href="#"><img src="img/temp/item-small1.jpg" width="140" height="150" alt="pic"></a> </li>
+          <li><a href="#"><img src="img/temp/item-small2.jpg" width="140" height="150" alt="pic"></a> </li>
+          <li><a href="#"><img src="img/temp/item-small3.jpg" width="140" height="150" alt="pic"></a> </li>
           </ul>
       </div>
+      </div>
     <div class="product-descript">
-      <div class="article-item">Есть в наличии</div>
-      <div class="article-item">Артикул: dexer-ae</div>
+    <div class="item-code">
+    <ul>
+      <li class="article-item">Есть в наличии</li>
+      <li class="article-item">Артикул: dexer-ae</li>
+      </ul>
+      </div>
       <div class="description">
         <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
      </div>
