--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
  <body>
    <header class="main-header">
      <div class= "container clearfix">
-       <a class="logo" href="#"><img src="img/logo/catalog-logo.png" width="150" height="100" alt="pic"></a>
+       <a class="logo" href="#"><img src="img/logo/catalog-logo.png" width="110" height="30" alt="pic"></a>
       <nav class="main-navigation">
            <ul>
              <li>
@@ -103,7 +103,7 @@
    <div class="catalog">
    <div class="catalog-pagination">
    <div class="catalog-item">
-     <a href="#"><img src="img/temp/item1.jpg" width="150" height="100" alt="pic"></a>
+     <a href="#"><img src="img/temp/item1.jpg" width="220" height="166" alt="pic"></a>
      <a href="#">Набор для путешествий
        <div class= "item">«Baxter Of California»</div>
      </a>
@@ -112,8 +112,8 @@
        <a href="#" class="btn">Купить</a>
      </div>
    </div>
-   <div class="catalog_item">
-     <a href=""><img src="img/temp/item2.jpg" width="150" height="100" alt="pic"></a>
+   <div class="catalog-item">
+     <a href=""><img src="img/temp/item2.jpg" width="220" height="166" alt="pic"></a>
      <a href="#">Увлажняющий кондиционер
        <div class= "item">«Baxter Of California»</div>
      </a>
@@ -122,8 +122,8 @@
        <a href="#" class="btn">Купить</a>
      </div>
    </div>
-   <div class="catalog_item">
-     <a href=""><img src="img/temp/item3.jpg" width="150" height="100" alt="pic"></a>
+   <div class="catalog-item">
+     <a href=""><img src="img/temp/item3.jpg" width="220" height="166" alt="pic"></a>
      <a href="#">Гель для волос
        <div class= "item">«Cuavecito»</div>
      </a>
@@ -132,8 +132,8 @@
        <a href="#" class="btn">Купить</a>
      </div>
    </div>
-   <div class="catalog_item">
-   <a href=""><img src="img/temp/item4.jpg" width="150" height="100" alt="pic"></a>
+   <div class="catalog-item">
+   <a href=""><img src="img/temp/item4.jpg" width="220" height="166" alt="pic"></a>
    <a href="#">Глина для укладки волос
      <div class= "item">«American Crew»</div>
    </a>
@@ -142,8 +142,8 @@
      <a href="#" class="btn">Купить</a>
    </div>
  </div>
- <div class="catalog_item">
-   <a href=""><img src="img/temp/item5.jpg" width="150" height="100" alt="pic"></a>
+ <div class="catalog-item">
+   <a href=""><img src="img/temp/item5.jpg" width="220" height="166" alt="pic"></a>
    <a href="#">Гель для волос
      <div class= "item">«American Crew»</div>
    </a>
@@ -152,8 +152,8 @@
        <a href="#" class="btn">Купить</a>
      </div>
    </div>
-   <div class="catalog_item">
-     <a href=""><img src="img/temp/item6.jpg" width="150" height="100" alt="pic"></a>
+   <div class="catalog-item">
+     <a href=""><img src="img/temp/item6.jpg" width="220" height="166" alt="pic"></a>
        <a href="#">Набор для бритья
          <div class= "item">«Baxter Of California»</div>
        </a>
@@ -162,11 +162,11 @@
          <a href="#" class="btn">Купить</a>
        </div></div></div>
      <div class="pagination">
-       <ul class="pagination_list">
-         <li class="pagination_item"><a href="#">1</a></li>
-         <li class="pagination_item_active"><a href="#">2</a></li>
-         <li class="pagination_item"><a href="#">3</a></li>
-         <li class="pagination_item"><a href="#">4</a></li>
+       <ul class="pagination-list">
+         <li class="pagination-item"><a href="#">1</a></li>
+         <li class="pagination-item_active"><a href="#">2</a></li>
+         <li class="pagination-item"><a href="#">3</a></li>
+         <li class="pagination-item"><a href="#">4</a></li>
        </ul>
      </div>
      </div> 
