--- a/catalog-item.html
+++ b/catalog-item.html
@@ -48,19 +48,17 @@
         <img src="img/temp/item-big.jpg" width="460" height="499" alt="pic">
       </div>
       <div class="picture-small">
-        <ul>
+        <ul class="picture-small">
           <li><a href="#"><img src="img/temp/item-small1.jpg" width="140" height="150" alt="pic"></a> </li>
           <li><a href="#"><img src="img/temp/item-small2.jpg" width="140" height="150" alt="pic"></a> </li>
           <li><a href="#"><img src="img/temp/item-small3.jpg" width="140" height="150" alt="pic"></a> </li>
           </ul>
-      </div>
+          </div>
       </div>
     <div class="product-descript">
-    <div class="item-code">
-    <ul>
-      <li class="article-item">Есть в наличии</li>
-      <li class="article-item">Артикул: dexer-ae</li>
-      </ul>
+    <div class="item-code clearfix">
+      <div class="available">Есть в наличии</div>
+      <div class="article">Артикул: dexer-ae</div>
       </div>
       <div class="description">
         <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
@@ -69,7 +67,6 @@
        <div class="price">2900руб.</div>
        <a href="#" class="btn">Купить</a>
      </div>
-    <div class="item-content">
     <h2>В набор входят</h2>
     <ul class="item-content">
         <li>Средство для умывания(50мл)</li>
@@ -78,8 +75,7 @@
         <li>Крем после бритья, шампунь(50мл)</li>
         <li>Удобная кожаная косметичка</li>
      </ul>  
-    </div>
-    </div>
+  </div>
   </main>
 <footer class="main-footer">
      <div class="container clearfix">
