--- a/catalog.html
+++ b/catalog.html
@@ -28,12 +28,12 @@
              </li>   
            </ul>
          </nav>
-         <div class="user block">
+         <div class="user-block">
            <a class="login" href="#">Вход</a>
          </div>
      </div> 
    </header>
-   <main class="container">
+   <main class="container clearfix">
    <div class="title">
      <h1>Средства для ухода</h1>
    </div>
@@ -42,7 +42,7 @@
      <li><a class="breadcrumbs-link" href="#">Магазин</a></li>
      <li><a class="breadcrumbs-link" href="#">Средства для ухода</a></li>
    </ul>
-   <div class="left-centre">
+   <div class="left-centre clearfix">
    <aside class="sidebar">
      <form class="filter" action="btn" method="post">
      <h2>Производители</h2>
