--- a/price.html
+++ b/price.html
@@ -28,7 +28,7 @@
              </li>   
            </ul>
          </nav>
-         <div class="user block">
+         <div class="user-block">
            <a class="login" href="#">Вход</a>
          </div>
      </div> 
