--- a/catalog-item.html
+++ b/catalog-item.html
@@ -28,7 +28,7 @@
              </li>   
            </ul>
          </nav>
-         <div class="user block">
+         <div class="user-block">
            <a class="login" href="#">Вход</a>
          </div>
      </div> 
@@ -43,6 +43,7 @@
            <li><a class="breadcrumbs-link" href="#">Средства ухода</a></li>
            <li><a class="breadcrumbs-link" href="#">Набор для путешествий</a></li>
         </ul>
+        <div class="pic-desc clearfix">
         <div class="item-pics">
         <div class="picture-big">
         <img src="img/temp/item-big.jpg" width="460" height="499" alt="pic">
@@ -75,6 +76,7 @@
         <li>Крем после бритья, шампунь(50мл)</li>
         <li>Удобная кожаная косметичка</li>
      </ul>  
+  </div>
   </div>
   </main>
 <footer class="main-footer">
